--- a/Makefile.in
+++ b/Makefile.in
@@ -35,7 +35,7 @@ components: libs progs samples tutorials
 #=====================================================================
 
 LIBS=sim nedxml envir cmdenv tkenv
-PROGS=utils nedc gned plove
+PROGS=utils nedc gned scalars plove
 SAMPLES=aloha cqn dyna fddi fifo hcube hist neddemo p-to-p queueing routing routingdb tictoc tokenring
 
 #
@@ -75,6 +75,9 @@ nedc:
 
 gned:
 	cd $(OMNETPP_SRC_DIR)/gned && $(MAKE)
+
+scalars:
+	cd $(OMNETPP_SRC_DIR)/scalars && $(MAKE)
 
 plove:
 	cd $(OMNETPP_SRC_DIR)/plove && $(MAKE)
