--- a/configure.in
+++ b/configure.in
@@ -236,12 +236,21 @@ if test "$XSLTPROC" = "not found"; then
    AC_MSG_WARN(You can get it from http://xmlsoft.org/XSLT/)
 fi
 
+
 # "convert" from ImageMagick
-AC_ARG_VAR(GHOSTSCRIPT, Program to convert or rasterize Postscript files)
+AC_ARG_VAR(CONVERT, convert (ImageMagick) is used for EPS-JPG conversion by opp_neddoc)
+AC_CHECK_PROG(CONVERT, convert, convert,)
+
+# Ghostscript
+AC_ARG_VAR(GHOSTSCRIPT, Ghostscript is used for EPS-JPG conversion by opp_neddoc)
 AC_CHECK_PROG(GHOSTSCRIPT, gs, gs,)
 
 if test "$GHOSTSCRIPT" = ""; then
    AC_MSG_WARN(Ghostscript is needed by opp_neddoc to create diagrams.)
+else
+   if test "$CONVERT" = ""; then
+      AC_MSG_WARN(ImageMagick not found -- opp_neddoc may export broken network diagrams due to a Ghostscript problem.)
+   fi
 fi
 
 # "dot" from Graphviz
@@ -567,6 +576,7 @@ AC_SUBST(WISH)
 AC_SUBST(MAKEDEPEND)
 AC_SUBST(XSLTPROC)
 AC_SUBST(GHOSTSCRIPT)
+AC_SUBST(CONVERT)
 AC_SUBST(GIFTRANS)
 AC_SUBST(DOT)
 
