--- a/src/utils/Makefile.vc
+++ b/src/utils/Makefile.vc
@@ -37,6 +37,7 @@ opp_neddoc: opp_neddoc.in ..\..\configuser.vc
 	$(PERL) -i.bak -pe "s|\@GNED\@|$(OMNETPP_BIN_DIR:\=/)/gned.exe|" opp_neddoc
 	$(PERL) -i.bak -pe "s|\@XSLTPROC\@|$(XSLTPROC:\=/)|" opp_neddoc
 	$(PERL) -i.bak -pe "s|\@GHOSTSCRIPT\@|$(GHOSTSCRIPT:\=/)|" opp_neddoc
+	$(PERL) -i.bak -pe "s|\@CONVERT\@|$(CONVERT:\=/)|" opp_neddoc
 	$(PERL) -i.bak -pe "s|\@GIFTRANS\@|$(GIFTRANS:\=/)|" opp_neddoc
 	$(PERL) -i.bak -pe "s|\@DOT\@|$(DOT:\=/)|" opp_neddoc
 	$(PERL) -i.bak -pe "s|\@PERL\@|$(PERL:\=/)|" opp_neddoc
