*** empty log message ***

--- a/configure.in
+++ b/configure.in
@@ -479,16 +479,12 @@ if test "$EMBED_TCL_CODE" = yes; then
    TKENV_EMBED_SUFFIX=-e
    GNED_EMBED_SUFFIX=-e
    SCALARS_EMBED_SUFFIX=-e
-   PLOVE_VARIANT=plove-exe
+   PLOVE_EMBED_SUFFIX=-e
 else
    TKENV_EMBED_SUFFIX=
    GNED_EMBED_SUFFIX=
    SCALARS_EMBED_SUFFIX=
-   if test "$cygwin" = yes; then
-      PLOVE_VARIANT=plove-cyg
-   else
-      PLOVE_VARIANT=plove-sh
-   fi
+   PLOVE_EMBED_SUFFIX=
 fi
 
 #----------------------
@@ -610,7 +606,7 @@ AC_SUBST(PLOVE_IF_POSSIBLE)
 AC_SUBST(TKENV_EMBED_SUFFIX)
 AC_SUBST(GNED_EMBED_SUFFIX)
 AC_SUBST(SCALARS_EMBED_SUFFIX)
-AC_SUBST(PLOVE_VARIANT)
+AC_SUBST(PLOVE_EMBED_SUFFIX)
 
 AC_SUBST(OMNETPP_TKENV_DIR)
 AC_SUBST(OMNETPP_GNED_DIR)
