*** empty log message ***

--- a/configure.in
+++ b/configure.in
@@ -586,6 +586,9 @@ AC_SUBST(EXE_SUFFIX)
 AC_SUBST(HAVE_DLOPEN)
 AC_SUBST(TK_CFLAGS)
 AC_SUBST(TK_LIBS)
+AC_SUBST(HAVE_BLT)
+AC_SUBST(BLT_CFLAGS)
+AC_SUBST(BLT_LIBS)
 AC_SUBST(HAVE_MPI)
 AC_SUBST(MPI_CFLAGS)
 AC_SUBST(MPI_LIBS)
