--- a/src/plove/Makefile.vc
+++ b/src/plove/Makefile.vc
@@ -84,7 +84,7 @@ plove.res: plove.rc plove.ico
 	rc -fo plove.res -r plove.rc
 
 depend:
-	$(MAKEDEPEND) -I../../include -fMakefile.vc -- *.cc
+	$(MAKEDEPEND) -I../../include -fMakefile.vc -- *.cc engine/*.cc
 
 clean:
 	-del tclcode.cc *.obj engine\*.obj plove.exe 2> nul
@@ -111,3 +111,135 @@ tklib.obj: tklib.cc \
   tkutil.h
 tkutil.obj: tkutil.cc \
   tkutil.h
+engine/arraybuilder.obj: engine/arraybuilder.cc \
+  engine/channel.h \
+  engine/arraybuilder.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/channel.obj: engine/channel.cc \
+  engine/channel.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h
+engine/commonnodes.obj: engine/commonnodes.cc \
+  engine/commonnodes.h \
+  engine/channel.h \
+  engine/node.h \
+  engine/nodetype.h \
+  engine/util.h \
+  engine/exception.h \
+  engine/dataflowmanager.h
+engine/compoundfilter.obj: engine/compoundfilter.cc \
+  engine/util.h \
+  engine/compoundfilter.h \
+  engine/filternodes.h \
+  engine/nodetyperegistry.h \
+  engine/exception.h \
+  engine/nodetype.h \
+  engine/commonnodes.h \
+  engine/dataflowmanager.h \
+  engine/node.h \
+  engine/channel.h
+engine/dataflowmanager.obj: engine/dataflowmanager.cc \
+  engine/channel.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h
+engine/exception.obj: engine/exception.cc \
+  engine/exception.h
+engine/filewriter.obj: engine/filewriter.cc \
+  engine/channel.h \
+  engine/filewriter.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/filternodes.obj: engine/filternodes.cc \
+  engine/channel.h \
+  engine/filternodes.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/getvectors.obj: engine/getvectors.cc \
+  engine/getvectors.h \
+  engine/util.h \
+  engine/exception.h
+engine/mergernodes.obj: engine/mergernodes.cc \
+  engine/channel.h \
+  engine/mergernodes.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/nodetype.obj: engine/nodetype.cc \
+  engine/util.h \
+  engine/nodetype.h \
+  engine/exception.h \
+  engine/dataflowmanager.h \
+  engine/node.h \
+  engine/channel.h
+engine/nodetyperegistry.obj: engine/nodetyperegistry.cc \
+  engine/util.h \
+  engine/nodetyperegistry.h \
+  engine/arraybuilder.h \
+  engine/vectorfilereader.h \
+  engine/vectorfilewriter.h \
+  engine/filewriter.h \
+  engine/windowavg.h \
+  engine/filternodes.h \
+  engine/mergernodes.h \
+  engine/xyplotnode.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/node.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h \
+  engine/channel.h
+engine/test.obj: engine/test.cc
+engine/vectorfilereader.obj: engine/vectorfilereader.cc \
+  engine/channel.h \
+  engine/vectorfilereader.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/vectorfilewriter.obj: engine/vectorfilewriter.cc \
+  engine/channel.h \
+  engine/vectorfilewriter.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/windowavg.obj: engine/windowavg.cc \
+  engine/channel.h \
+  engine/windowavg.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/xyplotnode.obj: engine/xyplotnode.cc \
+  engine/channel.h \
+  engine/xyplotnode.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
