--- a/src/envir/Makefile.vc
+++ b/src/envir/Makefile.vc
@@ -7,12 +7,17 @@
 CFLAGS=$(CFLAGS) /DWIN32_DLL
 !endif
 
+!if "$(WITH_NETBUILDER)"=="yes"
+CFLAGS=$(CFLAGS) /DWITH_NETBUILDER
+!endif
+
 #
 # Local definitions
 #
 COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "../sim" /DBUILDING_ENVIR /DHAVE_DLOPEN=$(HAVE_DLOPEN)
 OBJS=args.obj cenvir.obj cinifile.obj main.obj omnetapp.obj fsutils.obj \
-     seeds.obj patmatch.obj platdep.obj speedmtr.obj filemgrs.obj akoutvectormgr.obj
+     seeds.obj patmatch.obj platdep.obj speedmtr.obj filemgrs.obj akoutvectormgr.obj \
+     cxmldoccache.obj
 LIBS=$(OMNETPP_SRC_DIR)/sim/sim_std.ilib
 
 #
