omnetpp.ini wildcard change

--- a/samples/cqn/parsim/omnetpp.ini
+++ b/samples/cqn/parsim/omnetpp.ini
@@ -26,17 +26,9 @@ status-frequency=10000
 default-run=1
 
 [Partitioning]
-*.tandemQueue[0].partition-id=0
-*.tandemQueue[0].switch[0].partition-id=0
-*.tandemQueue[0].queue[*].partition-id=0
-
-*.tandemQueue[1].partition-id=1
-*.tandemQueue[1].switch[0].partition-id=1
-*.tandemQueue[1].queue[*].partition-id=1
-
-*.tandemQueue[2].partition-id=2
-*.tandemQueue[2].switch[0].partition-id=2
-*.tandemQueue[2].queue[*].partition-id=2
+*.tandemQueue[0]**.partition-id=0
+*.tandemQueue[1]**.partition-id=1
+*.tandemQueue[2]**.partition-id=2
 
 [Run 1]
 network=cqnB
@@ -48,7 +40,7 @@ network=cqnB
 *.tandemQueue[*].qDelay=1
 
 [Run 2]
-network=cqnA
+network=cqnB
 *.numTandems = 3
 *.numQueuesPerTandem = 5
 *.queue[*].numInitialJobs=2
