*** empty log message ***

--- a/samples/routing/networks/omnetpp.ini
+++ b/samples/routing/networks/omnetpp.ini
@@ -19,6 +19,6 @@
 preload-ned-files = net60a.ned fullgraph.ned mesh.ned
 
 [Parameters]
-net60a.*.destAddresses="1 28 50"
-fullGraph.*.destAddresses="0 2"
-mesh.*.destAddresses="0 18 52"
+net60a.**.destAddresses="1 28 50"
+fullGraph.**.destAddresses="0 2"
+mesh.**.destAddresses="0 18 52"
